# ansible

./: .dockerignore  Dockerfile  README.md  Taskfile.dist.yml  pyproject.toml  requirements.Dockerfile  requirements.txt
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml  tag.yml
scripts/: Taskfile.dist.yml  check_helm.sh  check_kubectl.sh  check_kubectx.sh  check_kubens.sh
